modified .json files paths